--- a/style.css
+++ b/style.css
@@ -1,65 +1,90 @@
-.header {
-  background-image: url('your-logo-image-url');
-  background-size: cover;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+
+* {
+  box-sizing: border-box;
+}
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+  /*scrollbar-width: none;*/
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+.main-title {
+  font-size: 32px; 
+  font-weight: bold;
+  color: white;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
+/* Stile per la navbar */
 .navbar {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #333;
-  padding: 0 20px;
+  justify-content: center;
+  background-color: #003366;
+  padding: 10px;
 }
 
 .navbar a {
   color: #fff;
   text-decoration: none;
+  padding: 8px 15px;
   margin: 0 10px;
+  background-color: #00509e;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background-color 0.3s;
 }
-
-.dropdown {
-  position: relative;
+.navbar a:hover {
+  background-color: #0077cc;
 }
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: #333;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
 .container {
   display: flex;
   flex-wrap: wrap;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 40px auto;
 }
-
-.column {
-  flex: 1;
-  padding: 20px;
+.container h1 {
+  width: 100%;
+  font-size: 28px;
+  color: #333;
+  margin-bottom: 20px;
 }
-
-.main-content {
-  flex: 2;
-  padding: 20px;
+.container p {
+  font-size: 16px;
+  color: #333;
+  line-height: 1.6;
 }
-
-
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+.nome-cognome {
+  align-self: flex-start;
+}
+.additional-image {
+  width: 700px;
+  display: block;
+  margin: 20px auto;
+}
+#titolo {
+  color: red;
+  transition: color 0.5s;
+} 
